# zmey_gorynych_bot

./: .env.example  Dockerfile  README.md  docker-compose.yaml  pyproject.toml
src/: db.py  main.py  repository.py
src/core/: config.py  exception.py
src/domain/: model.py
src/tg/: __init__.py  router.py
src/tg/elements/: base.py  buttons.py  data.py  keyboards.py  messages.py
src/tg/handlers/: common.py
src/tg/utils/: context.py  tg_calendar.py
